# BinCalcX

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bincalc.pro  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/: app.qrc  app.rc  app.rc.in
src/: calculatorcontroller.cpp  calculatorcontroller.h  calculatormodel.cpp  calculatormodel.h  calculatorview.cpp  calculatorview.h  main.cpp
tests/: test_clipboard.cpp  test_controller.cpp  test_keys.cpp  test_model.cpp
